refactor: update connections and improve utility function in Nengo model
some improvements but it is not working as I want

Signed-off-by: Jorge M. Cruz-Duarte <jorge-mario.cruz-duarte@inria.fr>

--- a/experiments/nengo-neuropti-v3.ipynb
+++ b/experiments/nengo-neuropti-v3.ipynb
@@ -157,8 +157,8 @@
     "    tau     = 0.1\n",
     "    # nengo.Connection(\n",
     "    #     label       = \"recurrent\",\n",
-    "    #     pre         = ea.output,\n",
-    "    #     post        = ea.input,\n",
+    "    #     pre         = motor_ens.output,\n",
+    "    #     post        = motor_ens.input,\n",
     "    #     synapse     = tau,\n",
     "    #     function    = hs,\n",
     "    #     transform   = np.eye(NUM_DIMENSIONS),\n",
