Woking v6 but not good performance on ill-posed and anisotropic landscapes
Signed-off-by: Jorge M. Cruz-Duarte <jorge-mario.cruz-duarte@inria.fr>

--- a/experiments/nengo-neuropti-v1.ipynb
+++ b/experiments/nengo-neuropti-v1.ipynb
@@ -175,19 +175,19 @@
     "    # Controller towards the best-so-far\n",
     "    # eta = 0.2 # Learning rate or movement rate towards the best\n",
     "    # def controller(t, x):\n",
-    "    #     best_v  = x[:NUM_DIMENSIONS]\n",
-    "    #     curr_v  = x[NUM_DIMENSIONS:]\n",
+    "    #     best_v  = x[:NUM_DIMS]\n",
+    "    #     curr_v  = x[NUM_DIMS:]\n",
     "    #     return eta * (best_v - curr_v)\n",
     "\n",
     "    # control_node = nengo.Node(\n",
     "    #     label=\"controller\",\n",
     "    #     output=controller,\n",
-    "    #     size_in=2 * NUM_DIMENSIONS,\n",
-    "    #     size_out=NUM_DIMENSIONS,\n",
+    "    #     size_in=2 * NUM_DIMS,\n",
+    "    #     size_out=NUM_DIMS,\n",
     "    # )\n",
     "\n",
-    "    # nengo.Connection(selector_node[:NUM_DIMENSIONS], control_node[:NUM_DIMENSIONS], synapse=0)\n",
-    "    # nengo.Connection(ens_lif, control_node[NUM_DIMENSIONS:], synapse=0)      # Current state vector\n",
+    "    # nengo.Connection(selector_node[:NUM_DIMS], control_node[:NUM_DIMS], synapse=0)\n",
+    "    # nengo.Connection(ens_lif, control_node[NUM_DIMS:], synapse=0)      # Current state vector\n",
     "\n",
     "    # nengo.Connection(control_node, ens_lif, synapse=0.01)  # Apply control to the ensemble\n",
     "\n",
