--- a/experiments/nengo-neuropti-v2.ipynb
+++ b/experiments/nengo-neuropti-v2.ipynb
@@ -154,7 +154,7 @@
     "    #     post        = motor_ens.input,\n",
     "    #     synapse     = tau,\n",
     "    #     function    = hs,\n",
-    "    #     transform   = np.eye(NUM_DIMENSIONS),\n",
+    "    #     transform   = np.eye(NUM_DIMS),\n",
     "    # )\n",
     "    hs_node = nengo.Node(\n",
     "        label       = \"hs\",\n",
@@ -212,19 +212,19 @@
     "    # Controller towards the best-so-far\n",
     "    # eta = 0.2 # Learning rate or movement rate towards the best\n",
     "    # def controller(t, x):\n",
-    "    #     best_v  = x[:NUM_DIMENSIONS]\n",
-    "    #     curr_v  = x[NUM_DIMENSIONS:]\n",
+    "    #     best_v  = x[:NUM_DIMS]\n",
+    "    #     curr_v  = x[NUM_DIMS:]\n",
     "    #     return eta * (best_v - curr_v)\n",
     "\n",
     "    # control_node = nengo.Node(\n",
     "    #     label=\"controller\",\n",
     "    #     output=controller,\n",
-    "    #     size_in=2 * NUM_DIMENSIONS,\n",
-    "    #     size_out=NUM_DIMENSIONS,\n",
+    "    #     size_in=2 * NUM_DIMS,\n",
+    "    #     size_out=NUM_DIMS,\n",
     "    # )\n",
     "\n",
-    "    # nengo.Connection(selector_node[:NUM_DIMENSIONS], control_node[:NUM_DIMENSIONS], synapse=0)\n",
-    "    # nengo.Connection(ens_lif, control_node[NUM_DIMENSIONS:], synapse=0)      # Current state vector\n",
+    "    # nengo.Connection(selector_node[:NUM_DIMS], control_node[:NUM_DIMS], synapse=0)\n",
+    "    # nengo.Connection(ens_lif, control_node[NUM_DIMS:], synapse=0)      # Current state vector\n",
     "\n",
     "    # nengo.Connection(control_node, ens_lif, synapse=0.01)  # Apply control to the ensemble\n",
     "\n",
@@ -721,7 +721,7 @@
    "source": [
     "# Plot the decoded output of the ensemble\n",
     "plt.figure()\n",
-    "# plt.plot(sim.trange(), sim.data[ens_lif_val], label=[f\"x{i+1}\" for i in range(NUM_DIMENSIONS)])\n",
+    "# plt.plot(sim.trange(), sim.data[ens_lif_val], label=[f\"x{i+1}\" for i in range(NUM_DIMS)])\n",
     "plt.vlines(sim.data[shrink_trigger].nonzero()[0]*sim.dt, -5, 5, colors=\"grey\", linestyles=\"dashed\", label=\"Shrink\", alpha=0.2)\n",
     "plt.plot(sim.trange(), sim.data[xbest_val], label=[f\"x{i+1}\" for i in range(NUM_DIMENSIONS)])\n",
     "# plt.plot(sim.trange(), sim.data[input_probe], \"r\", label=\"Input\")\n",
@@ -760,7 +760,7 @@
     "plt.figure()\n",
     "plt.vlines(sim.data[shrink_trigger].nonzero()[0]*sim.dt, -1, 1, colors=\"grey\", linestyles=\"dashed\", label=\"Shrink\", alpha=0.2)\n",
     "plt.plot(sim.trange(), sim.data[ens_lif_val], label=[f\"x{i+1}\" for i in range(NUM_DIMENSIONS)])\n",
-    "# plt.plot(sim.trange(), sim.data[xbest_val], label=[f\"x{i+1}\" for i in range(NUM_DIMENSIONS)])\n",
+    "# plt.plot(sim.trange(), sim.data[xbest_val], label=[f\"x{i+1}\" for i in range(NUM_DIMS)])\n",
     "# plt.plot(sim.trange(), sim.data[input_probe], \"r\", label=\"Input\")\n",
     "plt.xlim(0, simulation_time)\n",
     "plt.legend()\n",
